	checkReplaceFuns().

    o	New option("scipen") provides some user control over the
	printing of numbers in fixed-point or exponential notation.
	(Contributed by David Brahm.)

    o	Arguments `unit' and `hmin' of pclust() are now implemented.

    o	factanal() now returns the test statistic and P-value formerly
	computed in the print method.


DEPRECATED & DEFUNCT

    o	The assignment operator `_' has been removed.

    o	printNoClass() is defunct.

    o	The classic MacOS port is no longer supported, and its files
	have been removed from the sources.

    o	print.coefmat() is deprecated in favour of printCoefmat()
	(which is identical apart from the default for na.print which
	is changed from "" to "NA").


INSTALLATION CHANGES

    o	The zlib code in the sources is used unless the external
	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly.

    o	There are new macros DYLIB_* for building dynamic libraries,
	and these are used for the dynamic Rmath library (which was
	previously built as a shared object).


BUG FIXES

    o	pnorm(x, 1,0) does not give NaN anymore;
	also, pnorm(x,m, s=Inf) == lim{s -> Inf} pnorm(x,m,s).
	Similar changes for dnorm(), cf PR#1218.

    o	data.matrix() was documented to replace factors by their
	codes, but in fact re-coded into the alphabetical ordering of
	the levels.



	**************************************************
	*						 *
	*	       1.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.7.1


BUG FIXES

    o	print.table() has used too much white space in some cases
	in 1.7.0.

    o	selectMethod() failed if `f' was a non-generic and
	optional=TRUE, and gave a confusing error message if
	optional=FALSE.

    o	pchisq(*, ncp) and qchisq(*, ncp) work in more cases for large ncp
	or quantile and give warning or error messages otherwise.
